src/janus/snapshots/bootstrap__janus__contract_tests__tests__fts_search_native.snap
---
source: src/janus/contract_tests.rs
expression: native_plan
---
FtsSearch {
    tenant_id: "tenant_999",
    term: "bomba hidraulica",
}
