src/janus/snapshots/bootstrap__janus__contract_tests__tests__fts_search_plan.snap
---
source: src/janus/contract_tests.rs
expression: plan
---
FtsSearch {
    term: "bomba hidraulica",
}
