src/janus/snapshots/bootstrap__janus__contract_tests__tests__point_lookup_plan.snap
---
source: src/janus/contract_tests.rs
expression: plan
---
PointLookup {
    entity_id: "01JTESTULID",
}
